Make compatible with Java 11